geolocation API implemented

--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,10 @@ body{
     flex-flow: column;
 }
 
+.curr_state{
+    color: red; !important
+}
+
 .refresh{
     color: white;
     font-family: 'Muli',futura-pt, sans-serif;
